Styles: Fix wrapping for `pre` elements

--- a/src/pages/TermsPage/TermsPage.css
+++ b/src/pages/TermsPage/TermsPage.css
@@ -22,4 +22,9 @@
   h4 {
     @apply text-sm;
   }
+
+  .info {
+    @apply font-sans;
+    @apply whitespace-pre-wrap;
+  }
 }
